updated header and footer styles

--- a/stax/src/main/webapp/style/main.css
+++ b/stax/src/main/webapp/style/main.css
@@ -1,3 +1,33 @@
+/* for sidebar */
+.sidebar ul {
+	margin:0;
+	padding:0;
+	border-bottom:1px solid #ccc;
+}
+.sidebar ul li {
+	margin:0;
+	padding:0;
+	list-style:none;
+	border:1px solid #ccc;
+	border-bottom:none;
+}
+.sidebar ul li a {
+	display:block;
+	padding:3px;
+	text-indent:30px;
+	text-decoration:none;
+}
+.sidebar ul li span {
+	display:block;
+	padding:3px;
+	text-indent:30px;
+	text-decoration:none;
+}
+.sidebar ul li a:hover {
+	background-color: #eee;
+}
+
+
 /* for MailChimp form */
 #mc_embed_signup #mce-EMAIL { 
   width: 270px;
@@ -12,4 +42,11 @@
 }
 #mc_embed_signup fieldset {
   border: none;
+}
+
+/* custom styling */
+.headerfooter {
+  color:#666666;
+  font-family:"Warnock Pro","Goudy Old Style","Palatino","Book Antiqua",Georgia,serif;
+  text-align: center;
 }
